# xsolar-usermanager

./: CMakeLists.txt  README.md
sql/AuthService/: 001_init.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.hpp  SwaggerComponent.hpp  Utils.hpp
src/auth/: AuthHandler.hpp  JWT.hpp
src/controller/: AdminController.hpp  AuthController.hpp  StaticController.hpp
src/db/: UserDb.hpp
src/db/model/: UserModel.hpp
src/dto/: AuthDto.hpp  PageDto.hpp  SignInDto.hpp  SignInEmailDto.hpp  SignUpDto.hpp  StatusDto.hpp  UserDto.hpp
src/interceptor/: AuthInterceptor.cpp  AuthInterceptor.hpp
src/service/: AuthService.cpp  AuthService.hpp  UserService.cpp  UserService.h
test/: FullTest.cpp  FullTest.hpp
